    PR d/88958 d/dmd: Merge upstream dmd 0fc786f49

Backport fix to disallow passing functions as parameters.

Fixes https://gcc.gnu.org/PR88958

Reviewed-on: https://github.com/dlang/dmd/pull/9437

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@269557 138bc75d-0d04-0410-961f-82ee72b054a4